# whattodo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Vagrantfile  config.js  cppcms.tar.bz2  whattodo.service
cmake/: fix-rpath.cmake  install.cmake  version.cmake
data/: PROGRAM_DESCRIPTION  VERSION  VERSION_TEMPLATE  VERSION_TEMPLATE_DEV
debian/: conffiles  config  postinst  preinst
inc/: data.h  whattodo.h
inc/content/: index.h  login.h  main.h  master.h  new.h  todo.h
inc/whattodo/: todo.h  user.h  whattodo.h
sql/: sqlite3.sql
src/: data.S  main.cpp  todo.cpp  whattodo.cpp
src/whattodo/: main.cpp  todo.cpp  user.cpp  whattodo.cpp
src/whattodoctl/: main.cpp
templates/: index.tmpl  login.tmpl  main.tmpl  master.tmpl  new.tmpl  todo.tmpl
